--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
-backend/__pycache__
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+
+# SQLite database
+instance/
+*.sqlite3
+
+# Uploaded files
+static/uploads/
+
+# Environment variables
+.env
